feat(graph): reactagent with llminputkey
Signed-off-by: zhouyou <zhouyou9505@gmail.com>